--- a/playbook.yml
+++ b/playbook.yml
@@ -9,26 +9,23 @@
         msg: The ansible user is {{ ansible_user }}
 
   roles:
-    - role: buluma.git
+    - role: geerlingguy.git
       become: true
-      vars:
-        git_username: dhoei
-        git_user_email: darellhoei@gmail.com
-        git_user_name: Darell Hoei
 
     - role: gantsign.oh-my-zsh
       users:
         - username: "{{ ansible_user }}"
 
     # Enable this when not using WSL2
-    # - role: geerlingguy.docker
-    #   become: true
-    #   docker_users:
-    #     - "{{ ansible_user }}"
+    - role: geerlingguy.docker
+      become: true
+      docker_users:
+        - "{{ ansible_user }}"
 
     - role: markosamuli.asdf
       vars:
         asdf_plugins:
           - name: python
           - name: nodejs
-          - name: golang
+
+    - role: gantsign.visual-studio-code
