updated plugin list

--- a/playbook.yml
+++ b/playbook.yml
@@ -15,6 +15,14 @@
     - role: gantsign.oh-my-zsh
       users:
         - username: "{{ ansible_user }}"
+          oh_my_zsh:
+            plugins:
+              - git
+              - sudo
+              - node
+              - docker
+              - python
+            update_mode: reminder
 
     # Enable this when not using WSL2
     - role: geerlingguy.docker
