commented out non-essential steps

--- a/playbook.yml
+++ b/playbook.yml
@@ -25,10 +25,10 @@
             update_mode: reminder
 
     # Enable this when not using WSL2
-    - role: geerlingguy.docker
-      become: true
-      docker_users:
-        - "{{ ansible_user }}"
+    # - role: geerlingguy.docker
+    #   become: true
+    #   docker_users:
+    #     - "{{ ansible_user }}"
 
     - role: markosamuli.asdf
       vars:
@@ -36,4 +36,4 @@
           - name: python
           - name: nodejs
 
-    - role: gantsign.visual-studio-code
+    # - role: gantsign.visual-studio-code
